--- a/src/mcu/Makefile
+++ b/src/mcu/Makefile
@@ -7,14 +7,15 @@ LINKERFLAGS=-mmcu=atmega1280 -Wl,-u,vfprintf -lprintf_flt
 #CFLAGS=
 #LINKERFLAGS=
 
-CFILES=main.c avr.c spi.c usb.c max3421e/max3421e.c max3421e/max3421e_usb.c adb.c
+MAIN=main
+CFILES=${MAIN}.c avr.c spi.c usb.c max3421e/max3421e.c max3421e/max3421e_usb.c adb.c
 OFILES=${CFILES:.c=.o}
 TARGET=microbridge
 
 all: ${TARGET}.elf
 	avr-objcopy -I elf32-avr -O ihex ${TARGET}.elf ${TARGET}.ihex
 	avr-objcopy -I elf32-avr -O binary ${TARGET}.elf ${TARGET}.bin
-
+	
 ${TARGET}.elf: ${OFILES}
 	${CC} ${LINKERFLAGS} ${OFILES} -o ${TARGET}.elf -lm
 	
