--- a/src/mcu/Makefile
+++ b/src/mcu/Makefile
@@ -1,8 +1,8 @@
 CC=avr-gcc
 
 #MCU=atmega168
-MCU=atmega328p
-#MCU=atmega1280
+#MCU=atmega328p
+MCU=atmega1280
 CFLAGS=-mmcu=${MCU} -Wall -Os -pedantic -std=c99 #-DSFHACK
 LINKERFLAGS=-mmcu=${MCU}
 
